--- a/app/scss/_sprites.scss
+++ b/app/scss/_sprites.scss
@@ -170,38 +170,38 @@ $spritePNG: url("../images/sprite.png");
 	background-position: -40px -440px;
 }
 
-.noTouch #content.stPaulHome .hero a.util-box-btn:hover .sprite-download,
-#content.stPaulHome .content-body .sprite-download {
+.noTouch body.stpaul-stPaulHome #content .hero a.util-box-btn:hover .sprite-download,
+body.stpaul-stPaulHome #content .content-body .sprite-download {
 	background-position: -80px -440px;
 }
 
-.noTouch #content.stPaulOffice .hero a.util-box-btn:hover .sprite-download,
-#content.stPaulOffice .content-body .sprite-download {
+.noTouch body.stpaul-stPaulOffice #content .hero a.util-box-btn:hover .sprite-download,
+body.stpaul-stPaulOffice #content .content-body .sprite-download {
 	background-position: -120px -440px;
 }
 
-.noTouch #content.spiritualLife .hero a.util-box-btn:hover .sprite-download,
-#content.spiritualLife .content-body .sprite-download {
+.noTouch body.stpaul-spiritualLife #content .hero a.util-box-btn:hover .sprite-download,
+body.stpaul-spiritualLife #content .content-body .sprite-download {
 	background-position: -160px -440px;
 }
 
-.noTouch #content.oneCommunity .hero a.util-box-btn:hover .sprite-download,
-#content.oneCommunity .content-body .sprite-download {
+.noTouch body.stpaul-oneCommunity #content .hero a.util-box-btn:hover .sprite-download,
+body.stpaul-oneCommunity #content .content-body .sprite-download {
 	background-position: -200px -440px;
 }
 
-.noTouch #content.ourParish .hero a.util-box-btn:hover .sprite-download,
-#content.ourParish .content-body .sprite-download {
+.noTouch body.stpaul-ourParish #content .hero a.util-box-btn:hover .sprite-download,
+body.stpaul-ourParish #content .content-body .sprite-download {
 	background-position: -240px -440px;
 }
 
-.noTouch #content.educationCenter .hero a.util-box-btn:hover .sprite-download,
-#content.educationCenter .content-body .sprite-download {
+.noTouch body.stpaul-educationCenter #content .hero a.util-box-btn:hover .sprite-download,
+body.stpaul-educationCenter #content .content-body .sprite-download {
 	background-position: -280px -440px;
 }
 
-.noTouch #content.mediaLibrary .hero a.util-box-btn:hover .sprite-download,
-#content.mediaLibrary .content-body .sprite-download {
+.noTouch body.stpaul-mediaLibrary #content .hero a.util-box-btn:hover .sprite-download,
+body.stpaul-mediaLibrary #content .content-body .sprite-download {
 	background-position: -320px -440px;
 }
 
@@ -220,38 +220,38 @@ $spritePNG: url("../images/sprite.png");
 	background-position: -40px -500px;
 }
 
-.noTouch #content.stPaulHome .hero a.util-box-btn:hover .sprite-link,
-#content.stPaulHome .content-body .sprite-link {
+.noTouch body.stpaul-stPaulHome #content .hero a.util-box-btn:hover .sprite-link,
+body.stpaul-stPaulHome #content .content-body .sprite-link {
 	background-position: -80px -500px;
 }
 
-.noTouch #content.stPaulOffice .hero a.util-box-btn:hover .sprite-link,
-#content.stPaulOffice .content-body .sprite-link {
+.noTouch body.stpaul-stPaulOffice #content .hero a.util-box-btn:hover .sprite-link,
+body.stpaul-stPaulOffice #content .content-body .sprite-link {
 	background-position: -120px -500px;
 }
 
-.noTouch #content.spiritualLife .hero a.util-box-btn:hover .sprite-link,
-#content.spiritualLife .content-body .sprite-link {
+.noTouch body.stpaul-spiritualLife #content .hero a.util-box-btn:hover .sprite-link,
+body.stpaul-spiritualLife #content .content-body .sprite-link {
 	background-position: -160px -500px;
 }
 
-.noTouch #content.oneCommunity .hero a.util-box-btn:hover .sprite-link,
-#content.oneCommunity .content-body .sprite-link {
+.noTouch body.stpaul-oneCommunity #content .hero a.util-box-btn:hover .sprite-link,
+body.stpaul-oneCommunity #content .content-body .sprite-link {
 	background-position: -200px -500px;
 }
 
-.noTouch #content.ourParish .hero a.util-box-btn:hover .sprite-link,
-#content.ourParish .content-body .sprite-link {
+.noTouch body.stpaul-ourParish #content .hero a.util-box-btn:hover .sprite-link,
+body.stpaul-ourParish #content .content-body .sprite-link {
 	background-position: -240px -500px;
 }
 
-.noTouch #content.educationCenter .hero a.util-box-btn:hover .sprite-link,
-#content.educationCenter .content-body .sprite-link {
+.noTouch body.stpaul-educationCenter #content .hero a.util-box-btn:hover .sprite-link,
+body.stpaul-educationCenter #content .content-body .sprite-link {
 	background-position: -280px -500px;
 }
 
-.noTouch #content.mediaLibrary .hero a.util-box-btn:hover .sprite-link,
-#content.mediaLibrary .content-body .sprite-link {
+.noTouch body.stpaul-mediaLibrary #content .hero a.util-box-btn:hover .sprite-link,
+body.stpaul-mediaLibrary #content .content-body .sprite-link {
 	background-position: -320px -500px;
 }
 
@@ -270,38 +270,38 @@ $spritePNG: url("../images/sprite.png");
 	background-position: -40px -470px;
 }
 
-.noTouch #content.stPaulHome .hero a.util-box-btn:hover .sprite-link-ext,
-#content.stPaulHome .content-body .sprite-link-ext {
+.noTouch body.stpaul-stPaulHome #content .hero a.util-box-btn:hover .sprite-link-ext,
+body.stpaul-stPaulHome #content .content-body .sprite-link-ext {
 	background-position: -80px -470px;
 }
 
-.noTouch #content.stPaulOffice .hero a.util-box-btn:hover .sprite-link-ext,
-#content.stPaulOffice .content-body .sprite-link-ext {
+.noTouch body.stpaul-stPaulOffice #content .hero a.util-box-btn:hover .sprite-link-ext,
+body.stpaul-stPaulOffice #content .content-body .sprite-link-ext {
 	background-position: -120px -470px;
 }
 
-.noTouch #content.spiritualLife .hero a.util-box-btn:hover .sprite-link-ext,
-#content.spiritualLife .content-body .sprite-link-ext {
+.noTouch body.stpaul-spiritualLife #content .hero a.util-box-btn:hover .sprite-link-ext,
+body.stpaul-spiritualLife #content .content-body .sprite-link-ext {
 	background-position: -160px -470px;
 }
 
-.noTouch #content.oneCommunity .hero a.util-box-btn:hover .sprite-link-ext,
-#content.oneCommunity .content-body .sprite-link-ext {
+.noTouch body.stpaul-oneCommunity #content .hero a.util-box-btn:hover .sprite-link-ext,
+body.stpaul-oneCommunity #content .content-body .sprite-link-ext {
 	background-position: -200px -470px;
 }
 
-.noTouch #content.ourParish .hero a.util-box-btn:hover .sprite-link-ext,
-#content.ourParish .content-body .sprite-link-ext {
+.noTouch body.stpaul-ourParish #content .hero a.util-box-btn:hover .sprite-link-ext,
+body.stpaul-ourParish #content .content-body .sprite-link-ext {
 	background-position: -240px -470px;
 }
 
-.noTouch #content.educationCenter .hero a.util-box-btn:hover .sprite-link-ext,
-#content.educationCenter .content-body .sprite-link-ext {
+.noTouch body.stpaul-educationCenter #content .hero a.util-box-btn:hover .sprite-link-ext,
+body.stpaul-educationCenter #content .content-body .sprite-link-ext {
 	background-position: -280px -470px;
 }
 
-.noTouch #content.mediaLibrary .hero a.util-box-btn:hover .sprite-link-ext,
-#content.mediaLibrary .content-body .sprite-link-ext {
+.noTouch body.stpaul-mediaLibrary #content .hero a.util-box-btn:hover .sprite-link-ext,
+body.stpaul-mediaLibrary #content .content-body .sprite-link-ext {
 	background-position: -320px -470px;
 }
 
@@ -320,38 +320,38 @@ $spritePNG: url("../images/sprite.png");
 	background-position: -40px -550px;
 }
 
-.noTouch #content.stPaulHome .hero a.hero-txt-btn:hover .sprite-link-sm,
-#content.stPaulHome .content-body .sprite-link-sm {
+.noTouch body.stpaul-stPaulHome #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+body.stpaul-stPaulHome #content .content-body .sprite-link-sm {
 	background-position: -80px -550px;
 }
 
-.noTouch #content.stPaulOffice .hero a.hero-txt-btn:hover .sprite-link-sm,
-#content.stPaulOffice .content-body .sprite-link-sm {
+.noTouch body.stpaul-stPaulOffice #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+body.stpaul-stPaulOffice #content .content-body .sprite-link-sm {
 	background-position: -120px -550px;
 }
 
-.noTouch #content.spiritualLife .hero a.hero-txt-btn:hover .sprite-link-sm,
-#content.spiritualLife .content-body .sprite-link-sm {
+.noTouch body.stpaul-spiritualLife #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+body.stpaul-spiritualLife #content .content-body .sprite-link-sm {
 	background-position: -160px -550px;
 }
 
-.noTouch #content.oneCommunity .hero a.hero-txt-btn:hover .sprite-link-sm,
-#content.oneCommunity .content-body .sprite-link-sm {
+.noTouch body.stpaul-oneCommunity #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+body.stpaul-oneCommunity #content .content-body .sprite-link-sm {
 	background-position: -200px -550px;
 }
 
-.noTouch #content.ourParish .hero a.hero-txt-btn:hover .sprite-link-sm,
-#content.ourParish .content-body .sprite-link-sm {
+.noTouch body.stpaul-ourParish #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+body.stpaul-ourParish #content .content-body .sprite-link-sm {
 	background-position: -240px -550px;
 }
 
-.noTouch #content.educationCenter .hero a.hero-txt-btn:hover .sprite-link-sm,
-#content.educationCenter .content-body .sprite-link-sm {
+.noTouch body.stpaul-educationCenter #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+body.stpaul-educationCenter #content .content-body .sprite-link-sm {
 	background-position: -280px -550px;
 }
 
-.noTouch #content.mediaLibrary .hero a.hero-txt-btn:hover .sprite-link-sm,
-#content.mediaLibrary .content-body .sprite-link-sm {
+.noTouch body.stpaul-mediaLibrary #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+body.stpaul-mediaLibrary #content .content-body .sprite-link-sm {
 	background-position: -320px -550px;
 }
 
@@ -370,37 +370,37 @@ $spritePNG: url("../images/sprite.png");
 	background-position: -40px -530px;
 }
 
-.noTouch #content.stPaulHome .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
-#content.stPaulHome .content-body .sprite-link-ext-sm {
+.noTouch body.stpaul-stPaulHome #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+body.stpaul-stPaulHome #content .content-body .sprite-link-ext-sm {
 	background-position: -80px -530px;
 }
 
-.noTouch #content.stPaulOffice .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
-#content.stPaulOffice .content-body .sprite-link-ext-sm {
+.noTouch body.stpaul-stPaulOffice #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+body.stpaul-stPaulOffice #content .content-body .sprite-link-ext-sm {
 	background-position: -120px -530px;
 }
 
-.noTouch #content.spiritualLife .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
-#content.spiritualLife .content-body .sprite-link-ext-sm {
+.noTouch body.stpaul-spiritualLife #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+body.stpaul-spiritualLife #content .content-body .sprite-link-ext-sm {
 	background-position: -160px -530px;
 }
 
-.noTouch #content.oneCommunity .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
-#content.oneCommunity .content-body .sprite-link-ext-sm {
+.noTouch body.stpaul-oneCommunity #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+body.stpaul-oneCommunity #content .content-body .sprite-link-ext-sm {
 	background-position: -200px -530px;
 }
 
-.noTouch #content.ourParish .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
-#content.ourParish .content-body .sprite-link-ext-sm {
+.noTouch body.stpaul-ourParish #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+body.stpaul-ourParish #content .content-body .sprite-link-ext-sm {
 	background-position: -240px -530px;
 }
 
-.noTouch #content.educationCenter .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
-#content.educationCenter .content-body .sprite-link-ext-sm {
+.noTouch body.stpaul-educationCenter #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+body.stpaul-educationCenter #content .content-body .sprite-link-ext-sm {
 	background-position: -280px -530px;
 }
 
-.noTouch #content.mediaLibrary .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
-#content.mediaLibrary .content-body .sprite-link-ext-sm {
+.noTouch body.stpaul-mediaLibrary #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+body.stpaul-mediaLibrary #content .content-body .sprite-link-ext-sm {
 	background-position: -320px -530px;
 }
