--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -148,12 +148,12 @@ $border-radius: 5px;
 
 
 $themes: (
-  stPaulHome: $col-stPaulHome,
-  stPaulOffice: $col-stPaulOffice,
-  spiritualLife: $col-spiritualLife,
-  oneCommunity: $col-oneCommunity,
-  ourParish: $col-ourParish,
-  educationCenter: $col-educationCenter,
-  mediaLibrary: $col-mediaLibrary
+  stpaul-stPaulHome: $col-stPaulHome,
+  stpaul-stPaulOffice: $col-stPaulOffice,
+  stpaul-spiritualLife: $col-spiritualLife,
+  stpaul-oneCommunity: $col-oneCommunity,
+  stpaul-ourParish: $col-ourParish,
+  stpaul-educationCenter: $col-educationCenter,
+  stpaul-mediaLibrary: $col-mediaLibrary
 ) !default;
 
