--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -7,38 +7,47 @@
 }
 
 @include breakpoint($tablet-width) {
-	#content.stPaulOffice .hero {
+	body.stpaul-stPaulHome #content .hero {
+		background: $col-stPaulHome;
+	}
+
+	body.stpaul-stPaulHome #content .hero .wrapper {
+		background: url("../images/stpaulHome-bg.jpg") no-repeat bottom right;
+		background-size: cover;
+	}
+
+	body.stpaul-stPaulOffice #content .hero {
 		background: $col-stPaulOffice url("../images/stpaulOffice-bg.jpg") no-repeat top right;
 		background-size: cover;
 	}
 
-	#content.spiritualLife .hero {
+	body.stpaul-spiritualLife #content .hero {
 		background: $col-spiritualLife url("../images/spiritualLife-bg.jpg") no-repeat top right;
 		background-size: cover;
 	}
 
-	#content.oneCommunity .hero {
+	body.stpaul-oneCommunity #content .hero {
 		background: $col-oneCommunity url("../images/oneCommunity-bg.jpg") no-repeat top right;
 		background-size: cover;
 	}
 
-	#content.ourParish .hero {
+	body.stpaul-ourParish #content .hero {
 		background: $col-ourParish url("../images/ourParish-bg.jpg") no-repeat top right;
 		background-size: cover;
 	}
 
-	#content.educationCenter .hero {
+	body.stpaul-educationCenter #content .hero {
 		background: $col-educationCenter url("../images/educationCenter-bg.jpg") no-repeat top right;
 		background-size: cover;
 	}
 
-	#content.mediaLibrary .hero {
+	body.stpaul-mediaLibrary #content .hero {
 		background: $col-mediaLibrary url("../images/mediaLibrary-bg.jpg") no-repeat top right;
 		background-size: cover;
 	}
 }
 
-#content {
+body #content {
 	.hero {
 		display: block;
 		position: relative;
@@ -161,15 +170,15 @@
 
 				span.subhead {
 					display: block;
-					font-size: 1.5rem;
+					font-size: 2rem;
 					line-height: 1.5rem;
 					font-weight: 700;
 					margin: 1.25rem 0 1rem;;
 				}
 
 				.util-box {
-					// margin: 0;
-					margin-bottom: 0;
+					margin: 0;
+					// margin-bottom: 0;
 				}
 			}
 
@@ -188,8 +197,8 @@
 					width: span(280px);
 
 					@include breakpoint($tablet-width) {
-						margin-bottom: 30px;
-						@include span(3);
+						margin-bottom: 10px;
+						@include span(4);
 					}
 
 					@include breakpoint($laptop-width) {
@@ -216,7 +225,7 @@
 				@include span(9);
 
 				@include breakpoint($tablet-width) {
-					@include span(6);
+					@include span(5);
 				}
 
 				@include breakpoint($laptop-width) {
@@ -240,7 +249,7 @@
 				.util-btn-divider {
 					display: none;
 					float: left;
-					margin: 24px 15px 0;
+					margin: 16px 15px 0;
 					padding-left: 1px;
 					padding-bottom: 70px;
 					border-left: 1px solid $col-white;
@@ -317,29 +326,13 @@
 			}
 		}
 
-		.sub-nav-bg {
-			position: absolute;
-			width: 100%;
-			height: 6px;
-			bottom: 0;
-			left: 0;
-			background: $col-white;
-
-			@include breakpoint($tablet-width) {
-				height: 60px;
-			}
-		}
-
 		.sub-nav {
 			position: absolute;
 			width: 100%;
 			height: 6px;
-			top: auto;
 			bottom: 0;
 			left: 0;
-			margin-top: 0;
 			text-align: center;
-			border-bottom: none;
 			overflow: hidden;
 			z-index: 500;
 
@@ -358,17 +351,23 @@
 				font-size: 0;
 
 				a.sub-nav-btn {
-					padding: 7px 13px;
-					line-height: 60px;
-					margin: 0;
+					display: inline-block;
+					padding: 0 13px;
+					line-height: 40px;
+					margin: 10px 0;
 					letter-spacing: 1pt;
 					font-size: 1rem;
 					font-weight: 400;
 					opacity: 1;
-					@include trans(.15s, color, ease-out);
+					// @include trans(.15s, color, ease-out);
+					transition: color .15s ease-out, margin .25s ease-out;
 
 					&:active {
 						color: $col-black;
+					}
+
+					&.on {
+						color: $col-white;
 					}
 				}
 
@@ -378,7 +377,7 @@
 					font: 0/0 a;
 					opacity: .1;
 					cursor: default;
-					@include trans(.15s, opacity, ease-out);
+					transition: opacity .15s ease-out, margin .25s ease-out;
 				}
 
 				.sub-nav-divider {
@@ -387,6 +386,7 @@
 					margin: 24px 0;
 					background: $col-white;
 					opacity: .25;
+					@include trans(.25s, margin, ease-out);
 				}
 
 				&:last-child {
@@ -396,6 +396,7 @@
 
 			@include breakpoint($tablet-width) {
 				height: 60px;
+				@include trans(.25s, height, ease-out);
 
 				ul {
 					display: inline-block;
@@ -404,26 +405,16 @@
 		}
 	}
 
-	&.sticky-nav {
+	&.skinny-nav {
 		.hero {
-			.sub-nav-bg {
-				@include breakpoint($tablet-width) {
-					height: 40px;
-				}
-			}
-
 			.sub-nav {
-				position: fixed;
-				top: 50px;
-				bottom: auto;
-				border-bottom: 1px solid $col-grey-d3;
-
 				a.sub-nav-btn {
-					line-height: 40px;
+					margin-top: 0;
+					margin-bottom: 0;
 				}
 
 				a.sprite-top-btn {
-					opacity: .75;
+					opacity: .65;
 					cursor: pointer;
 					margin-top: 5px;
 					margin-bottom: 5px;
@@ -439,7 +430,6 @@
 				}
 
 				@include breakpoint($tablet-width) {
-					top: 70px;
 					height: 40px;
 				}
 			}
@@ -447,57 +437,220 @@
 	}
 }
 
-.noTouch #content {
+body.stpaul-stPaulHome #content {
 	.hero {
-		.sub-nav {
-			a:hover {
-				color: $col-white;
+		min-height: 480px;
+		max-height: 1024px;
+
+		.wrapper {
+			text-align: center;
+
+			.hero-start-btns {
+				display: inline-block;
+				width: 302px;
+				margin: 30px auto;
+				padding: 0;
+				overflow: hidden;
+
+				a {
+					display: inline-block;
+					position: relative;
+					width: 100px;
+					height: 80px;
+					text-align: center;
+					float: left;
+
+					&:first-child, &:nth-child(3), &:nth-child(5) {
+						border-bottom: 1px solid rgba($col-white, .5);
+					}
+
+					.icon {
+						position: relative;
+						margin: 20px auto 0;
+						transform: translateY(-10px);
+					}
+
+					span {
+						position: relative;
+						display: block;
+						font-size: .8rem;
+						line-height: 1rem;
+						color: $col-white;
+						opacity: 1;
+						transform: translateY(-15px);
+					}
+
+					&:active {
+						span {
+							transition: none;
+							color: $col-black;
+						}
+						.icon {
+							transition: none;
+						}
+						.sprite-bell {
+							background-position: 0 -90px;
+						}
+						.sprite-fish {
+							background-position: -50px -90px;
+						}
+						.sprite-grape {
+							background-position: -100px -90px;
+						}
+						.sprite-cup {
+							background-position: -150px -90px;
+						}
+						.sprite-bread {
+							background-position: -200px -90px;
+						}
+						.sprite-album {
+							background-position: -250px -90px;
+						}
+					}
+				}
+
+				.start-btn-divider {
+					display: block;
+					position: relative;
+					width: 1px;
+					// height: 26px;
+					height: 70px;
+					margin: 10px 0 0;
+					border-right: 1px solid rgba($col-white, .5);
+					float: left;
+
+					&:nth-child(8), &:nth-child(10) {
+						margin: 0 0 10px;
+					}
+				}
 			}
 		}
 
-		a.util-box-btn:hover {
-			background: $col-white;
-		}
-	}
+		@include breakpoint($tablet-width) {
+			.wrapper {
+				height: 100%;
 
-	&.sticky-nav {
-		.hero .sub-nav {
-			a.sprite-top-btn:hover {
-				opacity: 1;
-				&:active {
-					opacity: .5;
+				&:before {
+					content: '';
+					display: inline-block;
+					height: 100%;
+					vertical-align: middle;
+				}
+
+				.hero-start-btns {
+					margin: 0;
+					vertical-align: middle;
+
+					a span {
+						font-size: .9rem;
+					}
+				}
+			}
+
+			min-height: 580px;
+			max-height: 1024px;
+		}
+
+		@include breakpoint($laptop-width) {
+			.wrapper {
+				.hero-start-btns {
+					width: auto;
+
+					a:first-child, a:nth-child(3), a:nth-child(5) {
+						border: none;
+					}
+
+					a .icon {
+						transform: translateY(-15px);
+					}
+
+					.start-btn-divider, .start-btn-divider:nth-child(8), .start-btn-divider:nth-child(10) {
+						height: 16px;
+						margin: 32px 0;
+						border-right: 1px solid rgba($col-white, .75);
+					}
+				}
+			}
+		}
+
+		.sub-nav {
+			height: 6px;
+			background: $col-black;
+
+			ul {
+				@extend %no-style-ul;
+
+				display: none;
+				position: relative;
+				height: 6px;
+
+				li {
+					line-height: 0;
+					height: 0;
+				}
+
+				@include breakpoint($tablet-width) {
+					display: inline-block;
+				}
+			}
+		}	
+	}
+}
+
+.noTouch {
+	body #content {
+		.hero {
+			.sub-nav {
+				a:hover {
+					color: $col-white;
+				}
+				a:active {
+		            color: $col-black;
+		        }
+			}
+
+			a.util-box-btn:hover {
+				background: $col-white;
+			}
+		}
+
+		&.skinny-nav {
+			.hero .sub-nav {
+				a.sprite-top-btn:hover {
+					opacity: 1;
+					&:active {
+						opacity: .5;
+					}
 				}
 			}
 		}
 	}
-}
 
-.noResize #content {
-	.hero a.util-box-btn {
-		@include trans(.15s, all, ease-out);
-	}
-}
+	body.stpaul-stPaulHome #content {
+		.hero {
+			.hero-start-btns {
+				a {
+					.icon {
+						transform: translateY(0);
+						@include trans(.25s, transform);
+					}
 
-.iOS-detect.noResize #content {
-	.hero {
-		transition: none;
-		.sub-nav {
-			transition: none;
-			@include trans(.25s, margin-top);
+					span {
+						opacity: 0;
+						@include trans(.15s, opacity, ease-out, 0s);
+					}
 
-			a {
-				transition: none;
-			}
-		}
-	}
+					&:hover {
+						.icon {
+							transform: translateY(-15px);
+						}
 
-	&.sticky-nav {
-		.hero .sub-nav {
-			margin-top: 40px;
-			top: 10px;
-
-			@include breakpoint($tablet-width) {
-				top: 30px;
+						span {
+							opacity: 1;
+							@include trans(.25s, opacity, ease-out, .15s);
+						}
+					}
+				}
 			}
 		}
 	}
