--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -53,4 +53,6 @@
 @import "sections/footer";
 @import "sections/hero";
 @import "sections/content-body";
+@import "sections/posting";
 
+@import "sections/hero-home";
