--- a/app/scss/_sprites.scss
+++ b/app/scss/_sprites.scss
@@ -158,6 +158,38 @@ $spritePNG: url("../images/sprite.png");
 
 
 
+.sprite-down-btn {
+	@extend %sprite-div;
+	position: relative;
+	background-position: -200px -190px;
+	width: 30px;
+	height: 20px;
+}
+
+.black .sprite-down-btn {
+	@extend .sprite-down-btn;
+	background-position: -250px -190px;
+}
+
+
+
+
+.sprite-down-sm-btn {
+	@extend %sprite-div;
+	position: relative;
+	background-position: -350px -190px;
+	width: 18px;
+	height: 12px;
+}
+
+.black .sprite-down-sm-btn {
+	@extend .sprite-down-sm-btn;
+	background-position: -380px -190px;
+}
+
+
+
+
 .sprite-download {
 	@extend %sprite-div;
 	position: relative;
@@ -308,7 +340,14 @@ body.stpaul-mediaLibrary #content .content-body .sprite-link-ext {
 
 
 
-.sprite-link-sm {
+.sprite-link-sm,
+.noTouch body.stpaul-stPaulHome #content .hero a.black:hover .sprite-link-sm,
+.noTouch body.stpaul-stPaulOffice #content .hero a.black:hover .sprite-link-sm,
+.noTouch body.stpaul-spiritualLife #content .hero a.black:hover .sprite-link-sm,
+.noTouch body.stpaul-oneCommunity #content .hero a.black:hover .sprite-link-sm,
+.noTouch body.stpaul-ourParish #content .hero a.black:hover .sprite-link-sm,
+.noTouch body.stpaul-educationCenter #content .hero a.black:hover .sprite-link-sm,
+.noTouch body.stpaul-mediaLibrary #content .hero a.black:hover .sprite-link-sm {
 	@extend %sprite-div;
 	position: relative;
 	background-position: 0 -550px;
@@ -316,41 +355,55 @@ body.stpaul-mediaLibrary #content .content-body .sprite-link-ext {
 	height: 14px;
 }
 
-.sprite-link-sm.black {
+// .black .sprite-link-sm,
+.noTouch body.stpaul-stPaulHome #content a:hover .sprite-link-sm,
+.noTouch body.stpaul-stPaulOffice #content a:hover .sprite-link-sm,
+.noTouch body.stpaul-spiritualLife #content a:hover .sprite-link-sm,
+.noTouch body.stpaul-oneCommunity #content a:hover .sprite-link-sm,
+.noTouch body.stpaul-ourParish #content a:hover .sprite-link-sm,
+.noTouch body.stpaul-educationCenter #content a:hover .sprite-link-sm,
+.noTouch body.stpaul-mediaLibrary #content a:hover .sprite-link-sm,
+body.stpaul-stPaulHome #content a.black .sprite-link-sm,
+body.stpaul-stPaulOffice #content a.black .sprite-link-sm,
+body.stpaul-spiritualLife #content a.black .sprite-link-sm,
+body.stpaul-oneCommunity #content a.black .sprite-link-sm,
+body.stpaul-ourParish #content a.black .sprite-link-sm,
+body.stpaul-educationCenter #content a.black .sprite-link-sm,
+body.stpaul-mediaLibrary #content a.black .sprite-link-sm {
 	background-position: -40px -550px;
 }
 
-.noTouch body.stpaul-stPaulHome #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+.noTouch body.stpaul-stPaulHome #content a.black:hover .sprite-link-sm,
 body.stpaul-stPaulHome #content .content-body .sprite-link-sm {
 	background-position: -80px -550px;
 }
 
-.noTouch body.stpaul-stPaulOffice #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+.noTouch body.stpaul-stPaulOffice #content a.black:hover .sprite-link-sm,
 body.stpaul-stPaulOffice #content .content-body .sprite-link-sm {
 	background-position: -120px -550px;
 }
 
-.noTouch body.stpaul-spiritualLife #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+.noTouch body.stpaul-spiritualLife #content a.black:hover .sprite-link-sm,
 body.stpaul-spiritualLife #content .content-body .sprite-link-sm {
 	background-position: -160px -550px;
 }
 
-.noTouch body.stpaul-oneCommunity #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+.noTouch body.stpaul-oneCommunity #content a.black:hover .sprite-link-sm,
 body.stpaul-oneCommunity #content .content-body .sprite-link-sm {
 	background-position: -200px -550px;
 }
 
-.noTouch body.stpaul-ourParish #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+.noTouch body.stpaul-ourParish #content a.black:hover .sprite-link-sm,
 body.stpaul-ourParish #content .content-body .sprite-link-sm {
 	background-position: -240px -550px;
 }
 
-.noTouch body.stpaul-educationCenter #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+.noTouch body.stpaul-educationCenter #content a.black:hover .sprite-link-sm,
 body.stpaul-educationCenter #content .content-body .sprite-link-sm {
 	background-position: -280px -550px;
 }
 
-.noTouch body.stpaul-mediaLibrary #content .hero a.hero-txt-btn:hover .sprite-link-sm,
+.noTouch body.stpaul-mediaLibrary #content a.black:hover .sprite-link-sm,
 body.stpaul-mediaLibrary #content .content-body .sprite-link-sm {
 	background-position: -320px -550px;
 }
@@ -358,7 +411,14 @@ body.stpaul-mediaLibrary #content .content-body .sprite-link-sm {
 
 
 
-.sprite-link-ext-sm {
+.sprite-link-ext-sm,
+.noTouch body.stpaul-stPaulHome #content .hero a.black:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-stPaulOffice #content .hero a.black:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-spiritualLife #content .hero a.black:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-oneCommunity #content .hero a.black:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-ourParish #content .hero a.black:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-educationCenter #content .hero a.black:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-mediaLibrary #content .hero a.black:hover .sprite-link-ext-sm {
 	@extend %sprite-div;
 	position: relative;
 	background-position: 0 -530px;
@@ -366,41 +426,55 @@ body.stpaul-mediaLibrary #content .content-body .sprite-link-sm {
 	height: 14px;
 }
 
-.sprite-link-ext-sm.black {
+// .black .sprite-link-ext-sm,
+.noTouch body.stpaul-stPaulHome #content .content-body a:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-stPaulOffice #content .content-body a:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-spiritualLife #content .content-body a:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-oneCommunity #content .content-body a:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-ourParish #content .content-body a:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-educationCenter #content .content-body a:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-mediaLibrary #content .content-body a:hover .sprite-link-ext-sm,
+body.stpaul-stPaulHome #content a.black .sprite-link-ext-sm,
+body.stpaul-stPaulOffice #content a.black .sprite-link-ext-sm,
+body.stpaul-spiritualLife #content a.black .sprite-link-ext-sm,
+body.stpaul-oneCommunity #content a.black .sprite-link-ext-sm,
+body.stpaul-ourParish #content a.black .sprite-link-ext-sm,
+body.stpaul-educationCenter #content a.black .sprite-link-ext-sm,
+body.stpaul-mediaLibrary #content a.black .sprite-link-ext-sm {
 	background-position: -40px -530px;
 }
 
-.noTouch body.stpaul-stPaulHome #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-stPaulHome #content a.black:hover .sprite-link-ext-sm,
 body.stpaul-stPaulHome #content .content-body .sprite-link-ext-sm {
 	background-position: -80px -530px;
 }
 
-.noTouch body.stpaul-stPaulOffice #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-stPaulOffice #content a.black:hover .sprite-link-ext-sm,
 body.stpaul-stPaulOffice #content .content-body .sprite-link-ext-sm {
 	background-position: -120px -530px;
 }
 
-.noTouch body.stpaul-spiritualLife #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-spiritualLife #content a.black:hover .sprite-link-ext-sm,
 body.stpaul-spiritualLife #content .content-body .sprite-link-ext-sm {
 	background-position: -160px -530px;
 }
 
-.noTouch body.stpaul-oneCommunity #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-oneCommunity #content a.black:hover .sprite-link-ext-sm,
 body.stpaul-oneCommunity #content .content-body .sprite-link-ext-sm {
 	background-position: -200px -530px;
 }
 
-.noTouch body.stpaul-ourParish #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-ourParish #content a.black:hover .sprite-link-ext-sm,
 body.stpaul-ourParish #content .content-body .sprite-link-ext-sm {
 	background-position: -240px -530px;
 }
 
-.noTouch body.stpaul-educationCenter #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-educationCenter #content a.black:hover .sprite-link-ext-sm,
 body.stpaul-educationCenter #content .content-body .sprite-link-ext-sm {
 	background-position: -280px -530px;
 }
 
-.noTouch body.stpaul-mediaLibrary #content .hero a.hero-txt-btn:hover .sprite-link-ext-sm,
+.noTouch body.stpaul-mediaLibrary #content a.black:hover .sprite-link-ext-sm,
 body.stpaul-mediaLibrary #content .content-body .sprite-link-ext-sm {
 	background-position: -320px -530px;
 }
