--- a/app/scss/sections/_content-body.scss
+++ b/app/scss/sections/_content-body.scss
@@ -8,12 +8,10 @@
 
 body #content {
 	.content-body {
-		// position: relative;
-		
 		color: $col-grey-d3;
 
 		a {
-			color: $col-grey-d3;
+			color: $col-black;
 
 			&:hover {
 				text-decoration: none;
@@ -24,19 +22,39 @@ body #content {
 			}
 		}
 
+		a.text-btn {
+			position: relative;
+			padding-right: 26px;
+
+			.icon {
+				position: absolute;
+				top: 1px;
+				right: 0;
+			}
+
+			&:active {
+				opacity: .5;
+			}
+		}
+
 		.section {
-			padding-top: 70px;
-			padding-bottom: 50px;
+			padding-top: 80px;
+			padding-bottom: 80px;
+			border-top: 1px solid lighten($col-grey, 5%); //REMOVE??
+
+			&:first-child {
+				border: none; //REMOVE??
+			}
+
+			&:last-child {
+				border: none; //REMOVE??
+				padding-bottom: 80px;
+			}
 
 			@include breakpoint($tablet-width) {
 				&:first-child {
 					padding-top: 90px;
-					border-bottom: 1px solid $col-grey-l; //REMOVE
 				}
-			}
-
-			&:last-child {
-				padding-bottom: 80px;
 			}
 		}
 
@@ -47,6 +65,10 @@ body #content {
 			@include breakpoint($tablet-width) {
 				@include span(6);
 				text-align: left;
+			}
+
+			&.no-sidebar {
+				@include span(9);
 			}
 		}
 
@@ -61,7 +83,14 @@ body #content {
 		}
 
 		h3 {
-			margin-bottom: 30px;
+			display: inline-block;
+			padding-bottom: 15px;
+			margin-bottom: 25px;
+
+			@include breakpoint($tablet-width) {
+				display: block;
+				margin-bottom: 15px;
+			}
 		}
 
 		.media {
@@ -78,25 +107,3 @@ body #content {
 	}
 }
 
-// .noResize #content {
-// 	.content-body {
-
-// 	}
-// }
-
-
-// #content.sticky-nav {
-// 	.content-body {
-// 		.anchor {
-// 			padding-bottom: 55px;
-
-// 			@include breakpoint($tablet-width) {
-// 				padding-bottom: 108px;
-// 			}
-// 		}
-
-// 		.section {
-// 			padding-bottom: 0;
-// 		}
-// 	}
-// }
