--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -8,11 +8,7 @@
 
 @include breakpoint($tablet-width) {
 	body.stpaul-stPaulHome #content .hero {
-		background: $col-stPaulHome;
-	}
-
-	body.stpaul-stPaulHome #content .hero .wrapper {
-		background: url("../images/stpaulHome-bg.jpg") no-repeat bottom right;
+		background: $col-stPaulHome url("../images/stpaulHome-bg.jpg") no-repeat bottom right;
 		background-size: cover;
 	}
 
@@ -72,6 +68,14 @@ body #content {
 
 			&:visited {
 				color: $col-white;
+			}
+		}
+
+		a.black {
+			color: $col-black;
+
+			&:visited {
+				color: $col-black;
 			}
 		}
 
@@ -150,13 +154,17 @@ body #content {
 					margin: 0;
 					margin-bottom: 30px;
 					padding: 2px;
-					padding-right: 28px;
+					padding-right: 26px;
 					line-height: 1rem;
 
 					span.icon {
 						position: absolute;
-						top: 2px;
+						top: 1px;
 						right: 0;
+
+						@include breakpoint($tablet-width) {
+							top: 2px;
+						}
 					}
 
 					&:active span.sprite-link-sm {
@@ -165,6 +173,16 @@ body #content {
 					
 					&:active span.sprite-link-ext-sm {
 						background-position: -40px -530px;
+					}
+					
+					&.black {
+						&:active span.sprite-link-sm {
+							background-position: 0 -550px;
+						}
+						
+						&:active span.sprite-link-ext-sm {
+							background-position: 0 -530px;
+						}
 					}
 				}
 
@@ -437,166 +455,6 @@ body #content {
 	}
 }
 
-body.stpaul-stPaulHome #content {
-	.hero {
-		min-height: 480px;
-		max-height: 1024px;
-
-		.wrapper {
-			text-align: center;
-
-			.hero-start-btns {
-				display: inline-block;
-				width: 302px;
-				margin: 30px auto;
-				padding: 0;
-				overflow: hidden;
-
-				a {
-					display: inline-block;
-					position: relative;
-					width: 100px;
-					height: 80px;
-					text-align: center;
-					float: left;
-
-					&:first-child, &:nth-child(3), &:nth-child(5) {
-						border-bottom: 1px solid rgba($col-white, .5);
-					}
-
-					.icon {
-						position: relative;
-						margin: 20px auto 0;
-						transform: translateY(-10px);
-					}
-
-					span {
-						position: relative;
-						display: block;
-						font-size: .8rem;
-						line-height: 1rem;
-						color: $col-white;
-						opacity: 1;
-						transform: translateY(-15px);
-					}
-
-					&:active {
-						span {
-							transition: none;
-							color: $col-black;
-						}
-						.icon {
-							transition: none;
-						}
-						.sprite-bell {
-							background-position: 0 -90px;
-						}
-						.sprite-fish {
-							background-position: -50px -90px;
-						}
-						.sprite-grape {
-							background-position: -100px -90px;
-						}
-						.sprite-cup {
-							background-position: -150px -90px;
-						}
-						.sprite-bread {
-							background-position: -200px -90px;
-						}
-						.sprite-album {
-							background-position: -250px -90px;
-						}
-					}
-				}
-
-				.start-btn-divider {
-					display: block;
-					position: relative;
-					width: 1px;
-					// height: 26px;
-					height: 70px;
-					margin: 10px 0 0;
-					border-right: 1px solid rgba($col-white, .5);
-					float: left;
-
-					&:nth-child(8), &:nth-child(10) {
-						margin: 0 0 10px;
-					}
-				}
-			}
-		}
-
-		@include breakpoint($tablet-width) {
-			.wrapper {
-				height: 100%;
-
-				&:before {
-					content: '';
-					display: inline-block;
-					height: 100%;
-					vertical-align: middle;
-				}
-
-				.hero-start-btns {
-					margin: 0;
-					vertical-align: middle;
-
-					a span {
-						font-size: .9rem;
-					}
-				}
-			}
-
-			min-height: 580px;
-			max-height: 1024px;
-		}
-
-		@include breakpoint($laptop-width) {
-			.wrapper {
-				.hero-start-btns {
-					width: auto;
-
-					a:first-child, a:nth-child(3), a:nth-child(5) {
-						border: none;
-					}
-
-					a .icon {
-						transform: translateY(-15px);
-					}
-
-					.start-btn-divider, .start-btn-divider:nth-child(8), .start-btn-divider:nth-child(10) {
-						height: 16px;
-						margin: 32px 0;
-						border-right: 1px solid rgba($col-white, .75);
-					}
-				}
-			}
-		}
-
-		.sub-nav {
-			height: 6px;
-			background: $col-black;
-
-			ul {
-				@extend %no-style-ul;
-
-				display: none;
-				position: relative;
-				height: 6px;
-
-				li {
-					line-height: 0;
-					height: 0;
-				}
-
-				@include breakpoint($tablet-width) {
-					display: inline-block;
-				}
-			}
-		}	
-	}
-}
-
 .noTouch {
 	body #content {
 		.hero {
@@ -620,35 +478,6 @@ body.stpaul-stPaulHome #content {
 					opacity: 1;
 					&:active {
 						opacity: .5;
-					}
-				}
-			}
-		}
-	}
-
-	body.stpaul-stPaulHome #content {
-		.hero {
-			.hero-start-btns {
-				a {
-					.icon {
-						transform: translateY(0);
-						@include trans(.25s, transform);
-					}
-
-					span {
-						opacity: 0;
-						@include trans(.15s, opacity, ease-out, 0s);
-					}
-
-					&:hover {
-						.icon {
-							transform: translateY(-15px);
-						}
-
-						span {
-							opacity: 1;
-							@include trans(.25s, opacity, ease-out, .15s);
-						}
 					}
 				}
 			}
